wasm/segment_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_11nurmqj/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/0a5c32c4401f1fa1ac858f6c648d09c3a2c9b186.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/0a5c32c4401f1fa1ac858f6c648d09c3a2c9b186.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/aadfe6c91515ad2c62ce38a406811393580fd64e.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/aadfe6c91515ad2c62ce38a406811393580fd64e.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/58192b66d1f3753cefe0f73367550bdcf124d50c.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/58192b66d1f3753cefe0f73367550bdcf124d50c.json" for subsequent builds)
cache:INFO:  - ok
